# shuffle

./: Cargo.toml  LICENSE  README.md  make_app.sh  make_dmg.sh  removebg.swift
Shuffle.app/Contents/: Info.plist
Shuffle.app/Contents/MacOS/: removebg
Shuffle.app/Contents/Resources/: AppIcon.icns
Shuffle.app/Contents/_CodeSignature/: CodeResources
src/: main.rs
